--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 
 #Private
 CONFIG.py
+.pytest_cache
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+*.pyw
+*.pyz
+*.pywz
+/files_test
 
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
